--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="/add_user" method="POST">
+<form action="/" method="POST">
   username:<br>
   <input type="text" name="username" value="">
   <br>
